feat: add link to retry payment
