# src/main/webui/src/api/service/catalog.ts
@@ -1,8 +1,8 @@
 /**
- * Generated by orval v7.17.0 🍺
+ * Generated by orval v7.17.2 🍺
  * Do not edit manually.
  * sqq-inscription API
- * OpenAPI spec version: 1.0-SNAPSHOT
+ * OpenAPI spec version: 1.2.1-SNAPSHOT
  */
 import * as axios from "axios";
 import type { AxiosRequestConfig, AxiosResponse } from "axios";
@@ -24,6 +24,21 @@ export const getSqqInscriptionAPI = () => {
     options?: AxiosRequestConfig,
   ): Promise<TData> => {
     return axios.default.get(`/api/v1/administration/cooperateurs`, options);
+  };
+
+  /**
+   * @summary Get
+   */
+  const getApiV1AdministrationCooperateursId = <
+    TData = AxiosResponse<CooperateurDTO>,
+  >(
+    id: number,
+    options?: AxiosRequestConfig,
+  ): Promise<TData> => {
+    return axios.default.get(
+      `/api/v1/administration/cooperateurs/${id}`,
+      options,
+    );
   };
 
   /**
@@ -106,14 +121,14 @@ export const getSqqInscriptionAPI = () => {
   /**
    * @summary Successful Payment
    */
-  const postApiV1PartsSupplementairesSuccessSouscriptionId = <
+  const postApiV1PartsSupplementairesSuccessUuid = <
     TData = AxiosResponse<unknown>,
   >(
-    souscriptionId: number,
+    uuid: string,
     options?: AxiosRequestConfig,
   ): Promise<TData> => {
     return axios.default.post(
-      `/api/v1/parts-supplementaires/success/${souscriptionId}`,
+      `/api/v1/parts-supplementaires/success/${uuid}`,
       undefined,
       options,
     );
@@ -242,33 +257,94 @@ export const getSqqInscriptionAPI = () => {
   /**
    * @summary Successful Payment
    */
-  const postApiV1RegistrationsSuccessCooperateurId = <
-    TData = AxiosResponse<unknown>,
-  >(
-    cooperateurId: number,
+  const postApiV1RegistrationsSuccessUuid = <TData = AxiosResponse<unknown>>(
+    uuid: string,
     options?: AxiosRequestConfig,
   ): Promise<TData> => {
     return axios.default.post(
-      `/api/v1/registrations/success/${cooperateurId}`,
+      `/api/v1/registrations/success/${uuid}`,
       undefined,
+      options,
+    );
+  };
+
+  /**
+   * @summary Retry Cooperateur Payment
+   */
+  const postApiV1RetryPaymentCooperateurUuid = <TData = AxiosResponse<unknown>>(
+    uuid: string,
+    options?: AxiosRequestConfig,
+  ): Promise<TData> => {
+    return axios.default.post(
+      `/api/v1/retry-payment/cooperateur/${uuid}`,
+      undefined,
+      options,
+    );
+  };
+
+  /**
+   * @summary Get Cooperateur Payment Info
+   */
+  const getApiV1RetryPaymentCooperateurUuid = <TData = AxiosResponse<unknown>>(
+    uuid: string,
+    options?: AxiosRequestConfig,
+  ): Promise<TData> => {
+    return axios.default.get(
+      `/api/v1/retry-payment/cooperateur/${uuid}`,
+      options,
+    );
+  };
+
+  /**
+   * @summary Retry Souscription Payment
+   */
+  const postApiV1RetryPaymentSouscriptionUuid = <
+    TData = AxiosResponse<unknown>,
+  >(
+    uuid: string,
+    options?: AxiosRequestConfig,
+  ): Promise<TData> => {
+    return axios.default.post(
+      `/api/v1/retry-payment/souscription/${uuid}`,
+      undefined,
+      options,
+    );
+  };
+
+  /**
+   * @summary Get Souscription Payment Info
+   */
+  const getApiV1RetryPaymentSouscriptionUuid = <TData = AxiosResponse<unknown>>(
+    uuid: string,
+    options?: AxiosRequestConfig,
+  ): Promise<TData> => {
+    return axios.default.get(
+      `/api/v1/retry-payment/souscription/${uuid}`,
       options,
     );
   };
 
   return {
     getApiV1AdministrationCooperateurs,
+    getApiV1AdministrationCooperateursId,
     postApiV1AdministrationCooperateursIdProcess,
     getApiV1AdministrationPartsAdditionnelles,
     postApiV1AdministrationPartsAdditionnellesIdProcess,
     postApiV1PartsSupplementaires,
-    postApiV1PartsSupplementairesSuccessSouscriptionId,
+    postApiV1PartsSupplementairesSuccessUuid,
     postApiV1Registrations,
-    postApiV1RegistrationsSuccessCooperateurId,
+    postApiV1RegistrationsSuccessUuid,
+    postApiV1RetryPaymentCooperateurUuid,
+    getApiV1RetryPaymentCooperateurUuid,
+    postApiV1RetryPaymentSouscriptionUuid,
+    getApiV1RetryPaymentSouscriptionUuid,
   };
 };
 export type GetApiV1AdministrationCooperateursResult = AxiosResponse<
   CooperateurDTO[]
 >;
+export type GetApiV1AdministrationCooperateursIdResult =
+  AxiosResponse<CooperateurDTO>;
 export type PostApiV1AdministrationCooperateursIdProcessResult =
   AxiosResponse<unknown>;
 export type GetApiV1AdministrationPartsAdditionnellesResult = AxiosResponse<
@@ -277,8 +353,12 @@ export type GetApiV1AdministrationPartsAdditionnellesResult = AxiosResponse<
 export type PostApiV1AdministrationPartsAdditionnellesIdProcessResult =
   AxiosResponse<unknown>;
 export type PostApiV1PartsSupplementairesResult = AxiosResponse<unknown>;
-export type PostApiV1PartsSupplementairesSuccessSouscriptionIdResult =
+export type PostApiV1PartsSupplementairesSuccessUuidResult =
   AxiosResponse<unknown>;
 export type PostApiV1RegistrationsResult = AxiosResponse<unknown>;
-export type PostApiV1RegistrationsSuccessCooperateurIdResult =
+export type PostApiV1RegistrationsSuccessUuidResult = AxiosResponse<unknown>;
+export type PostApiV1RetryPaymentCooperateurUuidResult = AxiosResponse<unknown>;
+export type GetApiV1RetryPaymentCooperateurUuidResult = AxiosResponse<unknown>;
+export type PostApiV1RetryPaymentSouscriptionUuidResult =
   AxiosResponse<unknown>;
+export type GetApiV1RetryPaymentSouscriptionUuidResult = AxiosResponse<unknown>;
